# crewai-experiment

./: README.md  pyproject.toml
src/crewai_experiment/: crew.py  main.py
