[project]
name = "crewai_experiment"
version = "0.1.0"
description = "crewai-experiment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewai_experiment = "crewai_experiment.main:run"
run_crew = "crewai_experiment.main:run"
train = "crewai_experiment.main:train"
replay = "crewai_experiment.main:replay"
test = "crewai_experiment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
